<resources>
    <string name="app_name">MyHealth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">MyHealth</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_questionnaires">Questionnaires</string>
    <string name="menu_questionnaire">Questionnaire</string>
    <string name="menu_stats">Statistics</string>
    <string name="start">Start</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="general_header">General</string>
    <string name="design_header">Design</string>
    <string name="questionnaires_header">Questionnaires</string>
    <string name="music_header">Music</string>
    <string name="general_title">General</string>
    <string name="general_key" translatable="false">general</string>
    <string name="general_greeting_title">Greeting</string>
    <string name="general_greeting_key" translatable="false">general_greeting_key</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="theme_title">Theme</string>
    <string name="dark_mode_key" translatable="false">dark</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="type_title">Type</string>
    <string name="type_key" translatable="false">type</string>
    <string name="questionnaires">Questionnaire</string>
    <string name="questionnaire_fast_start_key" translatable="false">fast_start</string>
    <string name="questionnaire_fast_start">Fast start</string>
    <string name="q1" translatable="false">Q1</string>
    <string name="q2" translatable="false">Q2</string>
    <string name="music">Music</string>
    <string name="music_title">Player</string>
    <string name="music_key" translatable="false">player</string>
    <string name="spotify" translatable="false">Spotify</string>
    <string name="spotify_key" translatable="false">spotify</string>
    <string name="playlist" translatable="false">Playlist</string>
    <string name="spotify_playlist_key" translatable="false">playlist</string>
    <string name="spotify_autoplay">Autoplay on start</string>
    <string name="spotify_autoplay_key" translatable="false">autoplay</string>
    <string name="spotify_add" translatable="false">spotify_add</string>
    <string name="spotify_play_on_device_key" translatable="false">spotify_play_on_device_key</string>
    <string name="spotify_play_on_device">Always play on this device</string>
    <string name="access_token" translatable="false">access_token</string>
    <string name="current_spotify_track_key" translatable="false">current_spotify_track_key</string>
    <string name="play">Play</string>
    <string name="track">Track</string>
    <string name="current_spotify_track">Current track</string>
    <string name="add_spotify_track">Add Spotify track</string>
    <string name="sleep_tracking">Sleep tracking</string>
    <string name="google_fit" translatable="false">Google Fit</string>
    <string name="google_fit_key" translatable="false">googleFit</string>
    <string name="green_theme">Green</string>
    <string name="green_theme_key" translatable="false">green</string>
    <string name="blue_theme">Blue</string>
    <string name="blue_theme_key" translatable="false">blue</string>
    <string name="red_theme">Red</string>
    <string name="red_theme_key" translatable="false">red</string>
    <string name="questionnaires_label">Questionnaires</string>
    <string name="firstrun" translatable="false">firstrun</string>
    <string name="showSpotifyLoginDialog" translatable="false">showSpotifyLoginDialog</string>
    <string name="showSpotifyDownloadDialog" translatable="false">showSpotifyDownloadDialog</string>
    <string name="services_header">Services</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="sometimes">Sometimes</string>
    <string name="overThePastWeek">Over the past week…</string>
    <string name="overThePastWeekInterfered">Over the past week, how much has your tinnitus interfered with…</string>
    <string name="tfiQuestionnaireAwareOf">1. What percentage of your time awake were you consciously <b>AWARE OF</b> your tinnitus?</string>
    <string name="tfiQuestionnaireStrongLoud">2. How STRONG or LOUD was your tinnitus?</string>
    <string name="tfiQuestionnaireAnnoyed">3. What percentage of your time awake were you ANNOYED by your tinnitus?</string>
    <string name="tfiQuestionnaireInControl">4. Did you feel IN CONTROL in regard to your tinnitus?</string>
    <string name="tfiQuestionnaireCope">5. How easy was it for you to COPE with your tinnitus?</string>
    <string name="tfiQuestionnaireIgnore">6. How easy was it for you to IGNORE your tinnitus?</string>
    <string name="tfiQuestionnaireConcentrate">7. Your ability to CONCENTRATE?</string>
    <string name="tfiQuestionnaireThinkClearly">8. Your ability to THINK CLEARLY?</string>
    <string name="tfiQuestionnaireFocusAttention">9. Your ability to FOCUS ATTENTION on other things besides your tinnitus?</string>
    <string name="tfiQuestionnaireFallAsleepStayAsleep">10. How often did your tinnitus make it difficult to FALL ASLEEP or STAY ASLEEP?</string>
    <string name="tfiQuestionnaireAsMuchSleep">11. How often did your tinnitus cause you difficulty in getting AS MUCH SLEEP as you needed?</string>
    <string name="tfiQuestionnaireSleepingDeeplyPeacefully">12. How much of the time did your tinnitus keep you from SLEEPING as DEEPLY or as PEACEFULLY as you would have liked?</string>
    <string name="tfiQuestionnaireHearClearly">13. Your ability to HEAR CLEARLY?</string>
    <string name="tfiQuestionnaireUnderstandPeople">14. Your ability to UNDERSTAND PEOPLE who are talking?</string>
    <string name="tfiQuestionnaireFollowConversations">15. Your ability to FOLLOW CONVERSATIONS in a group or at meetings?</string>
    <string name="tfiQuestionnaireQuietRestingActivities">16. Your QUIET RESTING ACTIVITIES?</string>
    <string name="tfiQuestionnaireRelax">17. Your ability to RELAX?</string>
    <string name="tfiQuestionnairePeaceAndQuiet">18. Your ability to enjoy “PEACE AND QUIET”?</string>
    <string name="tfiQuestionnaireSocialActivities">19. Your enjoyment of SOCIAL ACTIVITIES?</string>
    <string name="tfiQuestionnaireEnjoymentOfLife">20. Your ENJOYMENT OF LIFE?</string>
    <string name="tfiQuestionnaireRelationships">21. Your RELATIONSHIPS with family, friends and other people?</string>
    <string name="tfiQuestionnaireWorkOtherTasks">22. How often did your tinnitus cause you to have difficulty performing your WORK OR OTHER TASKS, such as home maintenance, school work, or caring for children or others?</string>
    <string name="tfiQuestionnaireAnxiousWorried">23. How ANXIOUS or WORRIED has your tinnitus made you feel?</string>
    <string name="tfiQuestionnaireBotheredUpset">24. How BOTHERED or UPSET have you been because of your tinnitus?</string>
    <string name="tfiQuestionnaireDepressed">25. How DEPRESSED were you because of your tinnitus?</string>
    <string name="tfiQuestionnaireNever">Never</string>
    <string name="tfiQuestionnaireNotAtAll">Not at all</string>
    <string name="tfiQuestionnaireNoneOfTheTime">None of the time</string>
    <string name="tfiQuestionnaireVeryMuch">Very much</string>
    <string name="tfiQuestionnaireVeryEasy">Very easy</string>
    <string name="tfiQuestionnaireDidNotInterfere">Did not interfere</string>
    <string name="tfiQuestionnaireAlways">Always</string>
    <string name="tfiQuestionnaireExtremely">Extremely</string>
    <string name="tfiQuestionnaireAllOfTheTime">All of the time</string>
    <string name="tfiQuestionnaireImpossible">Impossible</string>
    <string name="tfiQuestionnaireCompletelyInterfered">Completely interfered</string>
    <string name="thiQuestionnaire1">1. Because of your tinnitus, is it difficult for you to concentrate?</string>
    <string name="thiQuestionnaire2">2. Does the loudness of your tinnitus make it difficult for you to hear people?</string>
    <string name="thiQuestionnaire3">3. Does your tinnitus make you angry?</string>
    <string name="thiQuestionnaire4">4. Does your tinnitus make you feel confused? </string>
    <string name="thiQuestionnaire5">5. Because of your tinnitus, do you feel desperate?</string>
    <string name="thiQuestionnaire6">6. Do you complain a great deal about your tinnitus? </string>
    <string name="thiQuestionnaire7">7. Do you feel as though you cannot escape your tinnitus?</string>
    <string name="thiQuestionnaire8">8. Do you feel as though you cannot escape your tinnitus? </string>
    <string name="thiQuestionnaire9">9. Does your tinnitus interfere with your ability to enjoy your social activities (such as going out to dinner, to the movies)? </string>
    <string name="thiQuestionnaire10">10. Because of your tinnitus, do you feel frustrated?</string>
    <string name="thiQuestionnaire11">11. Because of your tinnitus, do you feel that you have a terrible disease?</string>
    <string name="thiQuestionnaire12">12. Does your tinnitus make it difficult for you to enjoy life?</string>
    <string name="thiQuestionnaire13">13. Does your tinnitus interfere with your job or household responsibilities?</string>
    <string name="thiQuestionnaire14">14. Because of your tinnitus, do you find that you are often irritable?</string>
    <string name="thiQuestionnaire15">15. Because of your tinnitus, is it difficult for you to read?</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="user_input_description">Filling out personal information is optional and helps to better categorize our user demographics.</string>
    <string name="menu_user">Personal Information</string>
    <string name="information_statistic_description">In the statistics overview you can see the results of your past week. This includes the submitted questionnaires, as well as your statistics regarding the use of the app.\n</string>
    <string name="information_music_description">You can play a song every time you open the app. This song can be added via Spotify.\n</string>
    <string name="information_music_description_add_new_song"><b>Add new songs</b>\n\t1. Open <b>Spotify</b>\n\t2. navigate to the desired song\n\t3. Click on <b>Share</b>\n\t4. Select MyHealth\n\t5. Save\n</string>
    <string name="information_music_description_problem">If a problem occurs, disable and re-enable Spotify under Settings and try again.\n</string>
    <string name="information_music_description_change_song"><b>Change song</b>\nYou can switch between the added songs by selecting the respective song under <b>Settings</b>.\n</string>
    <string name="information_questionnaire_description">There are 2 questionnaires at your choice. THI and TFI are questionnaires dealing with the cause of tinnitus.\n</string>
    <string name="information_questionnaire_description_fast_start"><b>Quick Start</b>\nIn order to be able to quickly fill out the desired questionnaire, there is the possibility to select one of the two for the quick start in the settings.\n</string>
    <string name="information_questionnaire_description_delete_questions"><b>Delete questions</b>\nSince some questions may be unimportant for you or seem redundant to you, you can remove questions from the questionnaires by long clicking on the respective question.\n</string>
</resources>