<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.dbis.myhealth.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_questionnaires"
        android:name="de.dbis.myhealth.ui.questionnaires.QuestionnairesFragment"
        android:label="@string/menu_questionnaires"
        tools:layout="@layout/fragment_questionnaires">
        <action
            android:id="@+id/action_nav_questionnaires_to_nav_questionnaire"
            app:destination="@id/nav_questionnaire" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="de.dbis.myhealth.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_questionnaire"
        android:name="de.dbis.myhealth.ui.questionnaire.QuestionnaireFragment"
        android:label="@string/menu_questionnaire"
        tools:layout="@layout/fragment_questionnaire" />

</navigation>