<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.information.InformationFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.florent37.expansionpanel.ExpansionHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:expansion_headerIndicator="@id/statisticHeaderIndicator"
                app:expansion_layout="@id/statisticExpansionLayout"
                app:expansion_toggleOnClick="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical|left"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_baseline_query_stats_24"
                    tools:ignore="RtlHardcoded" />

                <!-- HEADER -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/menu_stats"
                    android:textAppearance="@android:style/TextAppearance.Material.Title" />

                <!-- HEADER INDICATOR -->
                <ImageView
                    android:id="@+id/statisticHeaderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginStart="16dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp"
                    tools:ignore="RtlHardcoded" />


            </com.github.florent37.expansionpanel.ExpansionHeader>

            <com.github.florent37.expansionpanel.ExpansionLayout
                android:id="@+id/statisticExpansionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <!-- CONTENT -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_statistic_description"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </com.github.florent37.expansionpanel.ExpansionLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.florent37.expansionpanel.ExpansionHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:expansion_headerIndicator="@id/musicHeaderIndicator"
                app:expansion_layout="@id/musicExpansionLayout"
                app:expansion_toggleOnClick="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical|left"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_baseline_music_note_24"
                    tools:ignore="RtlHardcoded" />

                <!-- HEADER -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/music"
                    android:textAppearance="@android:style/TextAppearance.Material.Title" />

                <!-- HEADER INDICATOR -->
                <ImageView
                    android:id="@+id/musicHeaderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginStart="16dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp"
                    tools:ignore="RtlHardcoded" />


            </com.github.florent37.expansionpanel.ExpansionHeader>

            <com.github.florent37.expansionpanel.ExpansionLayout
                android:id="@+id/musicExpansionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <!-- CONTENT -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_music_description"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_music_description_add_new_song"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/information_music_description_problem"
                        android:textAppearance="@android:style/TextAppearance.Material.Small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_music_description_change_song"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />


                </LinearLayout>

            </com.github.florent37.expansionpanel.ExpansionLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.florent37.expansionpanel.ExpansionHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:expansion_headerIndicator="@id/questionnaireHeaderIndicator"
                app:expansion_layout="@id/questionnaireExpansionLayout"
                app:expansion_toggleOnClick="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical|left"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_baseline_question_answer_24"
                    tools:ignore="RtlHardcoded" />

                <!-- HEADER -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/questionnaires"
                    android:textAppearance="@android:style/TextAppearance.Material.Title" />


                <!-- HEADER INDICATOR -->
                <ImageView
                    android:id="@+id/questionnaireHeaderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginStart="16dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp"
                    tools:ignore="RtlHardcoded" />


            </com.github.florent37.expansionpanel.ExpansionHeader>

            <com.github.florent37.expansionpanel.ExpansionLayout
                android:id="@+id/questionnaireExpansionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <!-- CONTENT -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_questionnaire_description"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_questionnaire_description_fast_start"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_questionnaire_description_delete_questions"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />


                </LinearLayout>


            </com.github.florent37.expansionpanel.ExpansionLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>
